# searchsteward-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
searchsteward_mcp/: __init__.py  client.py  server.py
tests/: test_client.py  test_server.py
