[project]
name = "searchsteward-mcp"
version = "0.1.1"
description = "MCP server for SearchSteward — search job matches, read score breakdowns, log applications, and pull negotiation prep from any MCP client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SearchSteward" }]
keywords = ["mcp", "job-search", "claude", "searchsteward"]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://searchsteward.com"
Repository = "https://github.com/SearchSteward/searchsteward-mcp"
Issues = "https://github.com/SearchSteward/searchsteward-mcp/issues"

[project.scripts]
searchsteward-mcp = "searchsteward_mcp.server:main"

[project.optional-dependencies]
test = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["searchsteward_mcp"]
